deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: developershub-client
spec:
  selector:
    matchLabels:
      app: developershub-client
  replicas: 1
  template:
    metadata:
      labels:
        app: developershub-client
    spec:
      containers:
        - name:  developershub-client
          image: steven8519/developershub-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: developershub-client
spec:
  selector:
    app: developershub-client

  ports:
    - name: http
      port: 80
      nodePort: 30081

  type: NodePort
