ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: devhub-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: developershub-client
              servicePort: 80
          - path: /api/1.0/users
            backend:
              serviceName: developerhub-user-service
              servicePort: 8080
